--- a/style.css
+++ b/style.css
@@ -69,6 +69,23 @@ body {
     box-shadow: 0px 0px 15px #3a3a3a;
 }
 
+.errordivpopular {
+    width: 30%; /* Değişiklik burada */
+    margin: 0 2.5%;
+    margin-top: 2%;
+    padding: 10px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    height: 100px;
+    border-radius: 5px;
+    background-image: url("imgs/bg.png");
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0px 0px 15px #a19100;
+}
+
 .error h1 {
     color: rgb(221, 221, 221);
     font-size: 18px;
@@ -76,7 +93,7 @@ body {
     margin-bottom: 5px;
 }
 
-.errordiv .button {
+.button {
     margin-top: 10px;
 }
 
@@ -88,29 +105,43 @@ body {
     text-decoration: none;
     transition: all 0.075s ease-in;
     font-weight: bold;
+    color: #f5f5f5;
 }
 
 .button a:hover {
     background-color: #f13356;
     box-shadow: 0px 0px 10px #f13356;
+    color: #f5f5f5;
 }
 
-#errortitle{
+.errorinfo{
+    margin-top: 5%;
     margin-left: 5%;
-    padding-top: 5%;
+    width: 90%;
+}
+
+.errorinfo h1{
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 1.2px;
+}
+
+.errorinfo p span{
+    color: rgb(177, 177, 177);
 }
 
 .reasonandphoto{
     margin-left: 5%;
+    margin-top: 5%;
     width: 90%;
     display: flex;
     justify-content: center;
 }
 
-.reasonandphoto h2{
+.reasonandphoto h1{
     font-size: 18px;
-    padding-right: 5px;
     font-weight: 300;
+    letter-spacing: 1.2px;
 }
 
 .reasonandphoto p{
@@ -122,6 +153,47 @@ body {
     height: 200px;
     padding-left: 20px;
 }
+
+.solution{
+    margin-top: 5%;
+    margin-left: 5%;
+    width: 90%;
+    padding-bottom: 30px;
+}
+
+#sols{
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 1.2px;
+}
+
+.solution .sol{
+    margin-top: 30px;
+}
+
+a{
+    text-decoration: none;
+    color: rgb(32, 32, 255);
+    transition: all 0.05s ease-in;
+}
+
+a:hover{
+    color: rgb(82, 82, 255);
+}
+
+
+.solution #solution-number{
+    display: inline;
+    font-size: 20px;
+    padding: 5px 10px;
+    border-radius: 50%;
+    border: 2px solid #f5f5f5;
+}
+
+.solution .sol p{
+    margin-top: 15px;
+}
+
 
 
 @media (max-width: 768px) {
