--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ body {
     padding: 5px 10px;
     border-radius: 5px;
     background-color: transparent;
-    border: 2px solid #52AEF4;
+    background-color:#494e68;
     text-decoration: none;
     transition: all 0.075s ease-in;
     font-weight: bold;
